maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:43: error: ':' expected but ')' found.
def keepHandOnSideWall(s): Int = {gauche ();
                        ^PledgeMaze:53: error: identifier expected but '}' found.
}
^